# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "MiV-OS"
version = "0.3.0.post11"
description = "Python software for analysis and computing framework used in MiV project."
readme = "README.md"
authors = ["GazzolaLab <skim449@illinois.edu>"]
license = "MIT"
repository = "https://github.com/GazzolaLab/MiV-OS"
homepage = "https://mindinvitro.illinois.edu"
documentation = "https://miv-os.readthedocs.io"
keywords = ["neuroscience", "statistics", "data-analysis", "electrophysiology", "neurophysiology"]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

# ...
include = ["miv/py.typed"]
packages = [
    { include = "miv" },
]


[tool.poetry.scripts]  # TODO: query `scripts` directory
convert_open_ephys_to_miv = "miv.machinary.convert_open_ephys_to_miv:main"
miv_extract_spiketrain = "miv.machinary.miv_extract_spiketrain:main"


[tool.poetry.dependencies]
python = ">=3.8,<3.12"
scipy = "^1.9.1"
elephant = "^0.11.1"
matplotlib = "^3.5.2"
neo = ">=0.11.0,<0.12.0"
pandas = "^1.4.2"
PyWavelets = "^1.3.0"
quantities = "^0.13.0"
scikit-learn = "^1.1.1"
seaborn = ">=0.11.2,<0.13.0"
tqdm = "^4.64.0"
numpy = "^1.23.2"
viziphant = "^0.2.0"
Sphinx = {version = "^5.3.0", optional = true}
pydata-sphinx-theme = {version = "^0.13", optional = true}
readthedocs-sphinx-search = {version = "^0.1.2", optional = true}
sphinx-autodoc-typehints = {version = "^1.19.1", optional = true}
myst-parser = {version = "^0.18.1", optional = true}
numpydoc = {version = "^1.4.0", optional = true}
sphinx-togglebutton = {version = "^0.3.2", optional = true}
sphinx-copybutton = {version = "^0.5.0", optional = true}
sphinxcontrib-mermaid = {version = "^0.8.1", optional = true}
myst-nb = {version = "^0.17.1", optional = true}
pyinform = "^0.2.0"
graphviz = "^0.20.1"
Pillow = "9.3.0"
h5py = "^3.7.0"
pyvis = ">=0.2.1,<0.4.0"
#lyon = { git = "https://github.com/sciforce/lyon.git", rev = "91dd700", optional = true}
click = "^8.1.3"
pyserial = {version = "^3.5", optional = true}
numba = "^0.56.4"
machinable = "^4.0"
coverage = "^7.1.0"
opencv-python = "^4.7.0.72"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = {extras = ["colors"], version = "^5.10.1"}
mypy = "^1.0.1"
mypy-extensions = "^1.0.0"
pre-commit = "^3.0.4"
pydocstyle = "^6.1.1"
pylint = "^2.15.0"
pytest = "^7.1.3"
pyupgrade = "^3.2.2"
coverage = {extras = ["toml"], version = "^7.0.0"}
pytest-html = "^3.1.1"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"

[tool.poetry.extras]
docs = [
  "sphinx",
  "pydata-sphinx-theme",
  "readthedocs-sphinx-search",
  "sphinx-autodoc-typehints",
  "myst-parser",
  "myst-nb",
  "numpydoc",
  "sphinx-togglebutton",
  "sphinx-copybutton",
  "sphinxcontrib-mermaid"
]
experiment = [
  "lyon",
  "pyserial"
]


[tool.poetry.group.sortingExtension]
optional = true

[tool.poetry.group.sortingExtension.dependencies]
dtaidistance = "^2.3.10"
scikit-learn-extra = "^0.2.0"


[tool.poetry.group.algorithmExtension]
optional = true

[tool.poetry.group.algorithmExtension.dependencies]
rupture = "^1.4.5"


[tool.poetry.group.mpi]
optional = true

[tool.poetry.group.mpi.dependencies]
mpi4py = "^3.1.4"

[tool.black]
# https://github.com/psf/black
target-version = ["py38"]
line-length = 88
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 38
line_length = 88

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.8
pretty = true
show_traceback = true
color_output = true
strict = true

# allow_redefinition = false
# check_untyped_defs = false  # TODO: Disabled cuz it might be to harsh condition, but open to discussion.
# disallow_any_generics = false
# disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = true
# no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
# strict_equality = true
# strict_optional = true
# warn_no_return = true
# warn_redundant_casts = true
# warn_return_any = true
# warn_unreachable = false  # TODO: open to discussion
# warn_unused_configs = true
# warn_unused_ignores = true

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL", "ELLIPSIS"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
#  "--doctest-modules", TODO: Try to include pytest.doctest
#  "--doctest-continue-on-failure",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Enable pragma
    "pragma: no cover",
    "TODO",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == __main__:",
    "def __repr__",
    '''def plot_'.*\b':''',
    "if self.debug:",
    "if settings.DEBUG",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    '''class '.*\bProtocol\)':''',
    ''''@(abc\.)?'abstractmethod''',
    '\.\.\.'
]
fail_under = 40
show_missing = true


[tool.coverage.run]
branch = true
omit = [
    "*/.local/*",
	"setup.py",
    "*/__init__.py",
    "miv/io/intan/rhs.py",# not part of the dev target
    "miv/io/asdf/asdf.py",# not part of the dev target
]
